--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
-VITE_BACKEND_URL=http://localhost:5000
+VITE_BACKEND_URL=https://panchratanayurveda.onrender.com
+# VITE_BACKEND_URL=http://localhost:5000
 # VITE_BACKEND_URL=https://shipshop-e-commerce-backend.onrender.com
