--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/joy": "^5.0.0-beta.51",
     "axios": "^1.7.4",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
@@ -21,7 +24,8 @@
     "react-remove-scroll-bar": "^2.3.6",
     "react-router-dom": "^6.26.1",
     "react-slideshow-image": "^4.3.2",
-    "sweetalert2": "^11.12.4"
+    "sweetalert2": "^11.12.4",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
